* Thu Sep 13 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 6.0.3-0
- Added Puppet 5 and OEL support

* Thu Jun 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.2-0
- Advance beyond bad changelog entry

* Thu Jun 16 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.1-0
- Update to Puppet 4 custom function
- Confine puppet version in metadata.json

* Thu Jan 05 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0
- Removed the 'ctrl-alt-del' job since that has been moved into the 'simp'
  module

* Thu Dec 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.0-0
- Use simp_options module for global catalysts
- Use strongly typed parameters
- Fix bug whereby optional, respawn limit was not properly specified
  in upstart jobs.
- Refined upstart::job::sys_limit validation to reject non-integer numbers.

* Mon Nov 21 2016 SIMP-Team <https://groups.google.com/forum/#!forum/simp> - 5.0.0-0
- Updated module for compliance markup API v1.0.0 compatibility.

* Fri Jul 29 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.2-0
- Fixed an ordering issue in the 'job' ERB template

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-5
- Added compliance function support

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-4
- migration to simplib and simpcat (lib/ only)
- Fixed a set of bugs that were introduced to the 'job.erb' template.
- Code cleanup

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-3
- Changed puppet-server requirement to puppet

* Wed Apr 16 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- Added the ability to disable ctrl-alt-del to the main upstart class.

* Wed Feb 12 2014 Kendall Moore <kmoore@keywcorp.com> - 4.1.0-1
- Converted all boolean strings into native booleans.

* Fri Jan 03 2014 Nick Markowski <nmarkowski@keywcorp.com> 4.1.0-0
- Updated module for puppet3/hiera compatability, optimized code for lint tests,
  and added puppet-rspec tests.
